# HPE-Voxels

./: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  VISTA3D_PROMPTS.md  generate_diffuse_textures.py  generate_flux_uv_textures.py  generate_heart_diffuse.py  generate_organ_textures.py  generate_organ_textures_clean.py  generate_photo_realistic_uv_textures.py  generate_placeholder_diffuse_textures.py  generate_reference_based_uv_textures.py  glb2model.py  glb_viewer.py  model_viewer.py  nifti2obj.py  notes.sh  notes.txt  obj2glb.py  obj_viewer.py  pyproject.toml  run_pipeline.sh  s.sh  test_flux_remote.py  vista3d_prompts.json
backend/: .dockerignore  .gitignore  DOCKER.md  DOCKER_REBUILD_GUIDE.md  DOCKER_SETUP_SUMMARY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART_DOCKER.md  QUICK_START_UV_CONDITIONING.md  README.md  UV_CONDITIONING_GUIDE.md  deploy_remote.sh  docker-compose.yml  docker-up.sh  env.template  flux_server.py  pyproject.toml  quick_start_remote.md  rebuild_docker.sh  requirements.txt  run_server.sh  setup_ubuntu.sh  start_server.sh  test_api.sh  test_server.sh  test_uv_conditioning.py  update_requirements.sh
docs/: QUALITY_GUIDE.md  README.md  VISTA3D_PROMPTS.md
frontend/: README.md  USAGE.md  env.template  model_viewer.py  obj_texture_generator.py  pyproject.toml  requirements.txt  run_texture_generator.sh
frontend/conf/: vista3d_prompts.json
frontend/logic/: model_viewer_logic.py  obj_texture_generator_logic.py
frontend/utils/: FLUX_SEAMLESS_SOLUTION.md  FLUX_TEXTURE_GENERATION.md  FLUX_USAGE_EXAMPLE.md  MESH_BASED_SOLUTION.md  PIPELINE_STREAMLINED.md  QUICK_REFERENCE.md  README.md  SETUP_SUMMARY.md  SOLUTION_SUMMARY.md  UV_MASK_SOLUTION.md  UV_TEXTURE_FIX_GUIDE.md  add_uv_unwrap.py  add_uv_unwrap_improved.py  analyze_uv_problem.py  create_masks.sh  create_mesh_based_texture.py  create_perfect_uv_mask.py  create_realistic_colon_texture.py  create_seamless_texture.py  create_simple_uv_mask.py  create_uv_mask.py  create_uv_mask_improved.py  create_visible_colon_texture.py  fix_uv_mapping.py  fix_uv_texture_pipeline.py  generate_all_textures.sh  generate_flux_texture.py  generate_model_texture.py  generate_sd_texture.py  glb2model.py  nifti2obj.py  obj2model.py  pipeline.py  rebuild_uv_mapping.py
old/: AI_TEXTURE_GENERATION.md  ARCHITECTURE.md  DATA_DRIVEN_REFACTOR.md  generate_colon_flux_texture.py  generate_organ_textures_final.py  generate_uv_unwrapped_textures.py  setup_flux_remote.py
output/glb/: aorta.glb  colon.glb  heart.glb  left_hip.glb  right_hip.glb
output/models/aorta/: scene.glb  scene.gltf
output/models/colon/: scene.glb  scene.gltf
output/models/heart/: scene.glb  scene.gltf
output/models/left_hip/: scene.glb  scene.gltf
output/models/left_iliac_artery/: scene.glb  scene.gltf
output/models/nyctalus-noctula/: scene.gltf
output/models/right_hip/: scene.glb  scene.gltf
output/models/right_iliac_artery/: scene.glb  scene.gltf
